--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <!-- Display the channel matrix  -->
 <div class="container-fluid bg-dark text-white">
-    <h3><center>TV-kanalen.net</center></h3>
+    <p><center>TV-kanalen.net</center></p>
 	<a href="http://www.vrt.be/vrtnws/"           ><img class="img-thumbnail img-fluid mt-2 mb-2 mr-2 ml-2" src="thumbnails/www-vrt-be-vrtnws.png"    alt="VRT NWS"      width="75" ></a>
     <a href="http://www.vrt.be/vrtnu"             ><img class="img-thumbnail img-fluid mt-2 mb-2 mr-2 ml-2" src="thumbnails/www-vrt-be-vrtnu.png"     alt="VRT NU"       width="75"></a>
 	<a href="http://www.ketnet.be/"               ><img class="img-thumbnail img-fluid mt-2 mb-2 mr-2 ml-2" src="thumbnails/www-ketnet-be.png"        alt="Ketnet"       width="75" ></a>
